--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page2.html">Rólam</a>
+						<a class="nav-link link text-black text-primary display-4" href="portfolio.html">Rólam</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="page4.html" aria-expanded="false">Portfólió</a>
