--- a/foglaljidopontot.html
+++ b/foglaljidopontot.html
@@ -56,7 +56,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="page4.html" aria-expanded="false">Portfólió</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Foglalj időpontot</a></li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page3.html">Kapcsolat</a>
+						<a class="nav-link link text-black text-primary display-4" href="foglaljidopontot.html">Kapcsolat</a>
 					</li></ul>
 				
 				
