--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -54,7 +54,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="page2.html">Rólam</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page4.html" aria-expanded="false">Portfólió</a>
+						<a class="nav-link link text-black text-primary display-4" href="kapcsolat.html" aria-expanded="false">Portfólió</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Foglalj időpontot</a></li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="page3.html">Kapcsolat</a>
