Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page2.html">Rólam</a>
+						<a class="nav-link link text-black text-primary display-4" href="rolam.html">Rólam</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page4.html" aria-expanded="false">Portfólió</a>
-					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Foglalj időpontot</a></li>
+						<a class="nav-link link text-black text-primary display-4" href="portfolio.html" aria-expanded="false">Portfólió</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="foglaljidopontot.html">Foglalj időpontot</a></li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page3.html">Kapcsolat</a>
+						<a class="nav-link link text-black text-primary display-4" href="kapcsolat.html">Kapcsolat</a>
 					</li></ul>
 				
 				
